# medical_automation

./: .env.example  .gitignore  ClienteWindows  MANIFEST.in  MainD.txt  README.md  SECURITY.md  SQL_File.txt  ServidorCode.txt  ServidorCode2  ServidorCode2.txt  Untitled-1.sql  async function loadPhrases(category, sub.js  automation.db  config.py  database.txt  directions.txt  import sqlite3.py  import time.py  import tkinter as tk.py  load_snippets.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  server_mac.py  server_mac_fixed.py  snippet_expander.py  snippet_manager_gui.py  snippets.db
api/: __init__.py  medical_handler.py  snippet_routes.py
clean_suite/: README.md
clean_suite/raspberry_pi_server/: server.py  server_requirements.txt  snippets_data.sql
clean_suite/windows_clients/: ClienteWindows  snippet_expander.py  snippet_manager_gui.py
config/: __init__.py  settings.py
db/: __init__.py  medical_db.py  snippet_db.py
models/: __init__.py  medical_phrase.py  snippet.py
servers/: __init__.py  medical_server.py  snippet_server.py
services/: __init__.py  medical_service.py  snippet_service.py
src/medical_automation/: __init__.py  config.py
src/medical_automation/client/: __init__.py
src/medical_automation/server/: __init__.py  app.py
src/medical_automation/server/routes/: __init__.py  medical_routes.py  snippet_routes.py
src/medical_automation/utils/: __init__.py  db_manager.py  logger.py
templates/: medical_interface.html
tests/: conftest.py
tests/server/: test_medical_api.py  test_snippet_api.py
utils/: __init__.py  database_bootstrap.py
